[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/PlayerWalk2.png" type="Texture" id=1]
[ext_resource path="res://Textures/PlayerWalk1.png" type="Texture" id=2]
[ext_resource path="res://Textures/PlayerBase.png" type="Texture" id=3]
[ext_resource path="res://Unseen Passenger.gd" type="Script" id=4]
[ext_resource path="res://Textures/Lights/InvisibilityAura.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.2617
height = 56.7352

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[node name="Unseen Passenger" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )
player_path = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( 0, -8 )

[node name="BaseS" type="Sprite" parent="Sprites"]
light_mask = 2
texture = ExtResource( 3 )

[node name="LimbsAS" type="AnimatedSprite" parent="Sprites"]
light_mask = 2
frames = SubResource( 2 )
animation = "Idle"
playing = true

[node name="Light2D" type="Light2D" parent="Sprites"]
texture = ExtResource( 5 )
mode = 3
range_item_cull_mask = 2

[node name="DangerRadius" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 136.008, 0 )
collision_mask = 4

[node name="DangerRadius" type="Position2D" parent="DangerRadius"]
position = Vector2( 136.008, 0 )

[node name="FearRadius" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 272.016, 0 )
collision_mask = 4

[node name="FearRadius" type="Position2D" parent="FearRadius"]
position = Vector2( 272.016, 0 )

[node name="CautionRadius" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 408.024, 0 )
collision_mask = 4

[node name="CautionLoc" type="Position2D" parent="CautionRadius"]
position = Vector2( 408.024, 0 )

[node name="CautionTimer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="timeout" from="CautionTimer" to="." method="_on_Caution_Timer_timeout"]
